# WorldCupWinner

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: elo_ratings.csv
docs/: data_sources.md  literature_review.md
models/: feature_scaler.pkl  match_predictor.pt  team_encoder.pkl
results/: final_report.txt  improved_results.json  model_explanation.html  odds.csv  tournament_simulation.json  training_history.json  wc2026_predictions.csv  wc2026_predictions.json
src/: __init__.py  betting.py  config.py  data_processor.py  generate_report.py  improved_model.py  predict_wc2026.py  tournament_sim.py  train_improved.py
