[project]
name = "worldcup2026-predictor"
version = "1.0.0"
description = "2026 FIFA World Cup match prediction using deep learning (PyTorch)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "btogd123" },
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
gbdt = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
]
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
]
dev = [
    "ipython",
    "jupyter",
]

# PyTorch is installed from PyPI (includes CUDA on Windows via default channel)
# For CPU-only: uv sync --override torch==2.5.1 --override torchvision==0.20.1 --override torchaudio==2.5.1 --override "torch @ https://download.pytorch.org/whl/cpu/torch-2.5.1%2Bcpu-cp313-cp313-win_amd64.whl"

[tool.hatch.build.targets.wheel]
packages = ["src"]
